--- a/bank.html
+++ b/bank.html
@@ -64,7 +64,10 @@
   <!-- js file -->
 
   <script src="tailwind.config.js"></script>
-  <script src="bank.js"></script>
+  <!-- <script src="bank.js"></script> -->
+  <script src="js/function.js"></script>
+  <script src="js/deposit.js"></script>
+  <script src="js/withdraw.js"></script>
 </body>
 
 </html>
