--- a/index.html
+++ b/index.html
@@ -49,27 +49,27 @@
           </div>
           <div>
             <label class="block my-2  text-2xl" for="name">Name:</label>
-            <input class="rounded h-8 px-1" type="text" placeholder="Enter your name">
+            <input id="name" class="rounded h-8 px-1" type="text" placeholder="Enter your name">
 
           </div>
           <div>
             <label class="block my-2  text-2xl" for="email">email:</label>
-            <input class="rounded h-8 px-1" type="email" placeholder="Enter your email">
+            <input id="regiEmail" class="rounded h-8 px-1" type="email" placeholder="Enter your email">
 
           </div>
           <div>
             <label class="block my-2  text-2xl" for="password">Password:</label>
-            <input class="rounded h-8 px-1" type="password" placeholder="Enter your password">
+            <input id="regiPassword" class="rounded h-8 px-1" type="password" placeholder="Enter your password">
 
           </div>
           <div class="ms-2">
             <label class="block my-2  text-2xl" for="password">New password:</label>
-            <input class="rounded h-8 px-1" type="password" placeholder="Enter your new password">
+            <input id="newPass" class="rounded h-8 px-1" type="password" placeholder="Enter your new password">
 
           </div>
           <div class="subBtn my-5 rounded">
 
-            <div class="btnContainer"><button class="text-white rounded" id="btn-submit">Register</button></div>
+            <div class="btnContainer"><button class="text-white rounded" id="btn-register">Register</button></div>
           </div>
           <div class="text-white">
             <span class="signup">Allready have an acount</span> / <button id="loginPage" class="text-blue-400">Login
@@ -84,8 +84,10 @@
   </main>
 
   <!-- js file -->
+  <script src="js/function.js"></script>
   <script src="tailwind.config.js"></script>
   <script src="hello.js"></script>
+  <script src="js/registation.js"></script>
 </body>
 
 </html>
