--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <main>
 
-    <h1 class="text-5xl font-bold font-serif  w-fit mx-auto  text-white mb-12 text-center mt-16">
+    <h1 class=" text-3xl md:Ltext-5xl font-bold font-serif  w-fit mx-auto  text-white mb-12 text-center mt-16">
       Wellcome to
       <span class="font-semibold text-[#45f3ff]">Baper
         Bank</span>
