--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         Bank</span>
     </h1>
 
-    <div class="loginContainer">
+    <div class="loginContainer text-white">
       <div class="form">
         <div id="form-menu" class="w-full  mx-auto h-full">
           <h2 class="text-3xl my-5 font-semibold text-white">Please Login</h2>
@@ -43,7 +43,7 @@
           </div>
         </div>
         <!-- registation section -->
-        <div id="registation" class="">
+        <div id="registation" class=" text-white">
           <div>
             <h2 class="text-3xl">Registation Form</h2>
           </div>
