--- a/bank.html
+++ b/bank.html
@@ -7,10 +7,11 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.css" rel="stylesheet" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.js"></script>
+  <link rel="stylesheet" href="styleBank.css">
   <title>Bank Inside</title>
 </head>
 
-<body class="bg-violet-950 text-white">
+<body class=" text-white">
   <header class="my-10">
     <h1 class="text-5xl text-center mt-16">Lets get some <span class="font-semibold text-orange-600">Mooooooney
         !!</span>
