--- a/bank.html
+++ b/bank.html
@@ -19,15 +19,15 @@
   </header>
   <div class="">
     <div class="grid grid-cols-1 md:grid-cols-3 w-10/12 p-5 gap-10  mx-auto">
-      <div class="bg-green-600 rounded-md h-40">
+      <div class="bg-transparent money rounded-md h-40">
         <h2 class="text-3xl pt-10 font-semibold text-center">Deposit</h2>
         <p class="text-center text-2xl font-semibold my-3">$<span id="dep">00</span></p>
       </div>
-      <div class="bg-pink-600 rounded-md h-40">
+      <div class=" money rounded-md h-40">
         <h2 class="text-3xl pt-10 font-semibold text-center">Withdraw</h2>
         <p class="text-center text-2xl font-semibold my-3">$<span id="withdraw">00</span></p>
       </div>
-      <div class="bg-orange-600 rounded-md h-40">
+      <div class="money rounded-md h-40">
         <h2 class="text-3xl pt-10 font-semibold text-center">Balance</h2>
         <p class="text-center text-2xl font-semibold my-3">
           $<span id="balance">1200</span>
@@ -35,25 +35,31 @@
       </div>
     </div>
     <div class="grid grid-cols-1 md:grid-cols-2 w-10/12 p-5 gap-10  mx-auto">
-      <div class="bg-blue-400 rounded-md h-64">
+      <div class=" containerMoney rounded-md h-64">
         <div class="flex justify-center items-center flex-col h-full">
           <div>
             <h2 class="text-4xl my-3 font-semibold ">Please Deposit</h2>
-            <input type="number" id="depositInput" class="block text-black my-3 w-full px-2 rounded"
+            <input type="number" id="depositInput"
+              class="block  bg-transparent border-[#45f3ff] my-3 w-full px-2 rounded"
               placeholder="$ Amount you want to withdraw ">
-            <button id="depBtn"
-              class="px-8 py-2 bg-orange-500 font-semibold text-white rounded hover:bg-blue-600 transition-all">Deposit</button>
+            <div class="subBtn my-5 rounded">
+
+              <div class="btnContainer"><button class="text-white rounded" id="depBtn">Deposit</button></div>
+            </div>
           </div>
         </div>
       </div>
-      <div class="bg-purple-400 rounded-md h-64">
+      <div class="containerMoney rounded-md h-64">
         <div class="flex justify-center items-center flex-col h-full">
           <div>
             <h2 class="text-4xl my-3 font-semibold ">Please Withdraw</h2>
-            <input type="number" id="withdrawInput" class="block text-black my-3 w-full px-2 rounded"
+            <input type="number" id="withdrawInput"
+              class="block bg-transparent border-[#45f3ff] my-3 w-full px-2 rounded"
               placeholder="$ Amount you want to withdraw ">
-            <button class="px-8 py-2 bg-orange-500 font-semibold text-white rounded hover:bg-blue-600 transition-all"
-              id="btn-withdraw">Withdraw</button>
+            <div class="subBtn my-5 rounded">
+
+              <div class="btnContainer"><button class="text-white rounded" id="btn-withdraw">Withdraw</button></div>
+            </div>
           </div>
         </div>
       </div>
