--- a/bank.html
+++ b/bank.html
@@ -38,7 +38,7 @@
       <div class=" containerMoney rounded-md h-64">
         <div class="flex justify-center items-center flex-col h-full">
           <div>
-            <h2 class="text-4xl my-3 font-semibold ">Please Deposit</h2>
+            <h2 class="text-2xl md:text-4xl my-3 font-semibold ">Please Deposit</h2>
             <input type="number" id="depositInput"
               class="block  bg-transparent border-[#45f3ff] my-3 w-full px-2 rounded"
               placeholder="$ Amount you want to withdraw ">
@@ -52,7 +52,7 @@
       <div class="containerMoney rounded-md h-64">
         <div class="flex justify-center items-center flex-col h-full">
           <div>
-            <h2 class="text-4xl my-3 font-semibold ">Please Withdraw</h2>
+            <h2 class="text-2xl md:text-4xl my-3 font-semibold ">Please Withdraw</h2>
             <input type="number" id="withdrawInput"
               class="block bg-transparent border-[#45f3ff] my-3 w-full px-2 rounded"
               placeholder="$ Amount you want to withdraw ">
