--- a/index.html
+++ b/index.html
@@ -50,25 +50,26 @@
           <div>
             <label class="block my-2  text-2xl" for="name">Name:</label>
             <input id="name" class="rounded h-8 px-1" type="text" placeholder="Enter your name">
-            <p id="nameError"></p>
+
 
           </div>
           <div>
             <label class="block my-2  text-2xl" for="email">email:</label>
             <input id="regiEmail" class="rounded h-8 px-1" type="email" placeholder="Enter your email" required>
-            <p id="emailError"></p>
+
 
           </div>
           <div>
             <label class="block my-2  text-2xl" for="password">Password:</label>
             <input id="regiPassword" class="rounded h-8 px-1" type="password" placeholder="Enter your password"
               required>
-            <p id="passError"></p>
+
 
           </div>
           <div class="ms-2">
-            <label class="block my-2  text-2xl" for="password">New password:</label>
-            <input id="newPass" class="rounded h-8 px-1" type="password" placeholder="Enter your new password" required>
+            <label class="block my-2  text-2xl" for="password">Re Password:</label>
+            <input id="newPass" class="rounded h-8 px-1" type="password" placeholder="Enter retype your password"
+              required>
             <p id="alertPass"></p>
 
           </div>
